# OOP_PPT

./: CMakeLists.txt  README.md  pp1.txt  pp2.txt  pp3.txt  pp4.txt  slideshow.pptx
include/: Canvas.h  Color.h  CommandParser.h  Shape.h  ShapeFactory.h  Slide.h  SlideShow.h  UndoManager.h
oop_cp/: CMakeLists.txt  README.md  pp2.txt  pp3.txt
oop_cp/include/: CommandParser.h  Shape.h  SlideShow.h  Tokenizer.h
oop_cp/src/: CommandParser.cpp  Slide.cpp  SlideShow.cpp  main.cpp
src/: Canvas.cpp  Color.cpp  CommandParser.cpp  Shape.cpp  ShapeFactory.cpp  Slide.cpp  SlideShow.cpp  Tokenizer.cpp  UndoManager.cpp  main.cpp
